# reyfm-cli-player

./: .env  Cargo.toml
src/: main.rs
src/stuff/: api.rs  discord.rs  mod.rs
