[package]
name = "reyfm"
version = "0.1.0"
authors = ["Jan H <jhallwachs36@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.127"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
chrono = "0.4.19"
discord-rpc-client = "0.3.0"